# llava-phi3-cli

./: README.md  pyproject.toml
.github/workflows/: ci.yml
llava_phi3_cli/: main.py
