[tool.poetry]
name = "llava-phi3-cli"
version = "0.1.0"
description = ""
authors = ["Rick Anderson <rick.rickanderson@gmail.com>"]
readme = "README.md"
packages = [{include = "llava_phi3_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
ollama = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
